<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:icon="@mipmap/search"
        android:orderInCategory="1"
        app:showAsAction="always"
        android:title="@string/ToolBar_Search"/>

    <item
        android:id="@+id/groupchat"
        android:icon="@mipmap/groupchat"
        android:orderInCategory="2"
        app:showAsAction="never"
        android:title="@string/ToolBar_GroupChat"/>

    <item
        android:id="@+id/addfriend"
        android:icon="@mipmap/addfriend"
        android:orderInCategory="3"
        app:showAsAction="never"
        android:title="@string/ToolBar_AddFriend"/>

    <item
        android:id="@+id/scan"
        android:icon="@mipmap/scan"
        android:orderInCategory="4"
        app:showAsAction="never"
        android:title="@string/ToolBar_Scan"/>

    <item
        android:id="@+id/suggest"
        android:icon="@mipmap/suggest"
        android:orderInCategory="5"
        app:showAsAction="never"
        android:title="@string/ToolBar_Suggest"/>

</menu>